--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
 
       <div class="inner" style="background-color:black;width:100%">
 	  
-        <div class="media d-block feature" style="background-image:url(images/2.jpg);background-repeat:no-repeat;position:relative;top:45px;margin-bottom:130px">
-          <div class="icon"><span class="flaticon-student" style="position:relative;top:-10px;left:370px"></span></div>
+        <div class="media d-block feature" style="background-image:url(images/2.jpg);background-repeat:no-repeat;position:relative;top:18%;margin-bottom:130px">
+          <div class="icon"><span class="flaticon-student" style="position:relative;left:135%"></span></div>
           <div class="media-body">
-            <h3 class="mt-0" style="position:relative;top:-11px;left:309px">COMPUTER EDUCATION</h3>
+            <h3 class="mt-0" style="position:relative;left:117%">COMPUTER EDUCATION</h3>
            
 		   </div>
         </div>
 
-        <div class="media d-block feature" style="background-image:url(images/3.jpg);background-repeat:no-repeat;position:relative;top:45px;left:658px">
+        <div class="media d-block feature" style="background-image:url(images/3.jpg);background-repeat:no-repeat;position:relative;top:18%;left:50%">
           <div class="icon"></div>
           <div class="media-body">
                 
