--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
 
         <div class="media d-block feature" style="background-image:url(images/3.jpg);background-repeat:no-repeat;position:relative;top:18%;left:50%">
-          <div class="icon"></div>
+          <div class="icon" style="height:130px"></div>
           <div class="media-body">
                 
           </div>
