--- a/achive.html
+++ b/achive.html
@@ -116,14 +116,14 @@
         <section class="school-features text-dark d-flex">
           <div class="inner" style="width:100%">
             <div class="media d-block feature text-center" style="position:relative;left:30%">
-              <img src="images/mang1.jpg" alt="Image placeholder" class="mb-3" style="width:100%">
+              <img src="images/mang1.JPG" alt="Image placeholder" class="mb-3" style="width:100%">
               <div class="media-body">
                 <h3 class="mt-0">B.C.PREM KUMAR</h3>
                 <p>Correspondent</p>
                </div>
             </div>
             <div class="media d-block feature text-center" style="position:relative;left:30%">
-              <img src="images/mang2.jpg" alt="Image placeholder" class="mb-3" style="width:75%">
+              <img src="images/mang2.JPG" alt="Image placeholder" class="mb-3" style="width:75%">
               <div class="media-body">
                 <h3 class="mt-0">MARY JONES</h3>
                 <p>Headmistress</p>
