--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
     <!-- Theme Style -->
     <link rel="stylesheet" href="css/style.css">
+	  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-127464469-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-127464469-1');
+</script>
   </head>
   <body>
      <header role="banner">
