--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
     <!-- Theme Style -->
     <link rel="stylesheet" href="css/style.css">
-     <link rel="icon" href="images/icon.png">	  
+     <link rel="icon" href="images/icon.jpg">	  
 	  <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127464469-1"></script>
 <script>
