--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,900" rel="stylesheet">
-    <link rel="stylesheet" href="css/bootstrap.css">
+     <link rel="fluid-icon" href="https://github.com/bjoel67/nethajischool/blob/master/images/icon.jpg?raw=true" title="NEMS">
+     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="fonts/ionicons/css/ionicons.min.css">
@@ -13,7 +14,7 @@
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
     <!-- Theme Style -->
     <link rel="stylesheet" href="css/style.css">
-     <link rel="fluid-icon" href="images/icon.jpg" title="NEMS">	  
+   	  
 	  <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127464469-1"></script>
 <script>
