--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
-   <link rel="fluid-icon" href="https://github.com/bjoel67/nethajischool/blob/master/images/icon.jpg?raw=true" title="NEMS">
+   <link rel="fluid-icon" href="https://raw.githubusercontent.com/bjoel67/nethajischool/master/images/icon.jpg" title="NEMS">
     <link rel="stylesheet" href="fonts/ionicons/css/ionicons.min.css">	
     <link rel="stylesheet" href="fonts/fontawesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
