--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,900" rel="stylesheet">
-    <link rel="fluid-icon" href="images/icon1.jpg" sizes="57*57" title="NEMS"> 
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="icon1.jpg">
+     <link rel="shortcut icon" type="images/icon1.jpg" href="app_icon.ico">
+   <!-- <link rel="fluid-icon" href="images/icon1.jpg" sizes="57*57" title="NEMS"> -->
      <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
