--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,900" rel="stylesheet">
       <link rel="stylesheet" href="css/bootstrap.css">
-     <link href="https://assets.nflxext.com/us/ffe/siteui/common/icons/nficon2016.ico" rel="shortcut icon"> 
+     <link href="https://raw.githubusercontent.com/bjoel67/nethajischool/master/images/icon1.jpg" rel="shortcut icon"> 
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="fonts/ionicons/css/ionicons.min.css">
