--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
-     <link href="images/icon1.png" rel="shortcut icon"> 
+     <link href="images/icon.png" rel="shortcut icon"> 
     <link rel="stylesheet" href="fonts/ionicons/css/ionicons.min.css">	
     <link rel="stylesheet" href="fonts/fontawesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
