--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
 
   gtag('config', 'UA-127464469-1');
 </script>
+	  
+<script src="https://www.gstatic.com/firebasejs/5.5.7/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyBdGpGGwvM6GqKOZFKOdH8j1dm4_0erbI4",
+    authDomain: "my-new-213409.firebaseapp.com",
+    databaseURL: "https://my-new-213409.firebaseio.com",
+    projectId: "my-new-213409",
+    storageBucket: "",
+    messagingSenderId: "978471026093"
+  };
+  firebase.initializeApp(config);
+</script>
   </head>
   <body>
      <header role="banner">
