--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,20 @@
 
     <!-- Theme Style -->
     <link rel="stylesheet" href="css/style.css">
+	  
+<script src="https://www.gstatic.com/firebasejs/5.5.7/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyBdGpGGwvM6GqKOZFKOdH8j1dm4_0erbI4",
+    authDomain: "my-new-213409.firebaseapp.com",
+    databaseURL: "https://my-new-213409.firebaseio.com",
+    projectId: "my-new-213409",
+    storageBucket: "",
+    messagingSenderId: "978471026093"
+  };
+  firebase.initializeApp(config);
+</script>
   </head>
   <body>
     
