--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
-     <link href="images/icon.png" rel="shortcut icon"> 
+     <link href="images/icon1.png" rel="shortcut icon"> 
     <link rel="stylesheet" href="fonts/ionicons/css/ionicons.min.css">	
     <link rel="stylesheet" href="fonts/fontawesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
@@ -38,10 +38,7 @@
               <li class="nav-item">
                 <a class="nav-link active" href="about.html" style="width:200px">About</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-              </li>
-            </ul>
+               </ul>
                         
           </div>
         </div>
@@ -62,7 +59,40 @@
       </div>
     </section>
     <!-- END section -->
-
+<section class="site-section">
+      <div class="container">
+        <div class="row justify-content-center mb-5">
+          <div class="col-md-7 text-center">
+            <h2>Meet our Management</h2>
+            </div>
+        </div>
+        <section class="school-features text-dark d-flex">
+          <div class="inner" style="width:100%">
+		  <div class="media d-block feature text-center" style="position:relative;left:10%">
+              <img src="images/di.JPG" alt="Image placeholder" class="mb-3" style="width:100%;height:75%">
+              <div class="media-body">
+                <h3 class="mt-0">Rammohan Rao Karam</h3>
+                <p>Director</p>
+               </div>
+            </div>
+            <div class="media d-block feature text-center" style="position:relative;left:10%">
+              <img src="images/mang1.JPG" alt="Image placeholder" class="mb-3" style="width:100%">
+              <div class="media-body">
+                <h3 class="mt-0">B.C.PREM KUMAR</h3>
+                <p>Correspondent</p>
+               </div>
+            </div>
+            <div class="media d-block feature text-center" style="position:relative;left:10%">
+              <img src="images/mang2.JPG" alt="Image placeholder" class="mb-3" style="width:75%">
+              <div class="media-body">
+                <h3 class="mt-0">MARY JONES</h3>
+                <p>Headmistress</p>
+                 </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </section>
 
     <section class="site-section bg-light">
       <div class="container">
