--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,900" rel="stylesheet">
       <link rel="stylesheet" href="css/bootstrap.css">
-     <link href="images/icon.png" rel="shortcut icon"> 
+     <link href="images/icon1.png" rel="shortcut icon"> 
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="fonts/ionicons/css/ionicons.min.css">
@@ -23,20 +23,6 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-127464469-1');
-</script>
-	  
-<script src="https://www.gstatic.com/firebasejs/5.5.7/firebase.js"></script>
-<script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyBdGpGGwvM6GqKOZFKOdH8j1dm4_0erbI4",
-    authDomain: "my-new-213409.firebaseapp.com",
-    databaseURL: "https://my-new-213409.firebaseio.com",
-    projectId: "my-new-213409",
-    storageBucket: "",
-    messagingSenderId: "978471026093"
-  };
-  firebase.initializeApp(config);
 </script>
   </head>
   <body>
@@ -58,10 +44,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="about.html" style="width:200px">About</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-              </li>
-            </ul>
+              </ul>
                         
           </div>
         </div>
