--- a/achive.html
+++ b/achive.html
@@ -97,23 +97,23 @@
           </div>
 		  <div class="col-md-4 col-sm-6 col-12">
 		  <img src="images/tday5.jpg" alt="Image placeholder" style="width:345px;height:202px">
-              <h2>Teacher Day</h2>
+              <h2>Teacher's Day</h2>
           </div>
 		  <div class="col-md-4 col-sm-6 col-12">
 		  <img src="images/tday4.jpg" alt="Image placeholder" style="width:345px;height:202px">
-              <h2>Teacher Day</h2>
+              <h2>Teacher's Day</h2>
           </div>
 		  <div class="col-md-4 col-sm-6 col-12">
 		  <img src="images/tday3.jpg" alt="Image placeholder" style="width:345px;height:202px">
-              <h2>Teacher Day</h2>
+              <h2>Teacher's Day</h2>
           </div>
 		  <div class="col-md-4 col-sm-6 col-12">
 		  <img src="images/tday2.jpg" alt="Image placeholder" style="width:345px;height:202px">
-              <h2>Teacher Day</h2>
+              <h2>Teacher's Day</h2>
           </div>
 		  <div class="col-md-4 col-sm-6 col-12">
 		  <img src="images/tday1.jpg" alt="Image placeholder" style="width:345px;height:202px">
-              <h2>Teacher Day</h2>
+              <h2>Teacher's Day</h2>
           </div>
 		  <div class="col-md-4 col-sm-6 col-12">
 		  <img src="images/comp.jpg" alt="Image placeholder" style="width:345px;height:202px">
