--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="col-md-8 text-center">
 
             <div class="mb-5 element-animate">
-              <h1>Learning never exhausts the mind</h1>
+              <h1>Wisdom is Better than Jewellers</h1>
               </div>           
           </div>
         </div>
@@ -66,18 +66,29 @@
     </section>
     <!-- END section -->
 
-    <section class="school-features d-flex" style="background-image: url(images/1.jpg);">
+    <section class="school-features d-flex" >
 
-      <div class="inner" style="background-color:black;width:100%">
+      <div class="inner" style="background-color:black;width:103%">
 	  
         <div class="media d-block feature" style="background-image:url(images/2.jpg);background-repeat:no-repeat;position:relative;top:18%;margin-bottom:130px">
           <div class="icon"><span class="flaticon-student" style="position:relative;left:135%"></span></div>
           <div class="media-body">
             <h3 class="mt-0" style="position:relative;left:117%">COMPUTER EDUCATION</h3>
+           <div class="icon"><svg aria-hidden="true" data-prefix="fas" data-icon="bus" class="svg-inline--fa fa-bus fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" style="
+    width: 17%;
+    position: absolute;
+    left: 172%;
+    top: 30%;
+    height: 24%;
+	color:floralwhite;
+"><path fill="currentColor" d="M488 128h-8V80c0-44.8-99.2-80-224-80S32 35.2 32 80v48h-8c-13.25 0-24 10.74-24 24v80c0 13.25 10.75 24 24 24h8v160c0 17.67 14.33 32 32 32v32c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-32h192v32c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-32h6.4c16 0 25.6-12.8 25.6-25.6V256h8c13.25 0 24-10.75 24-24v-80c0-13.26-10.75-24-24-24zM112 400c-17.67 0-32-14.33-32-32s14.33-32 32-32 32 14.33 32 32-14.33 32-32 32zm16-112c-17.67 0-32-14.33-32-32V128c0-17.67 14.33-32 32-32h256c17.67 0 32 14.33 32 32v128c0 17.67-14.33 32-32 32H128zm272 112c-17.67 0-32-14.33-32-32s14.33-32 32-32 32 14.33 32 32-14.33 32-32 32z"></path></svg></div>
+          <div class="media-body">
+       <h3 class="mt-0" style="position: absolute;left: 177%;top: 67%;">BUS</h3>
            
 		   </div>
         </div>
-
+		   </div>
+     
         <div class="media d-block feature" style="background-image:url(images/3.jpg);background-repeat:no-repeat;position:relative;top:18%;left:50%">
           <div class="icon" style="height:130px"></div>
           <div class="media-body">
