--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="fonts/ionicons/css/ionicons.min.css">
     <link rel="stylesheet" href="fonts/fontawesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
-    <!-- Theme Style -->
+    <link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css">   
     <link rel="stylesheet" href="css/style.css">
    	  
 	  <!-- Global site tag (gtag.js) - Google Analytics -->
