--- a/achive.html
+++ b/achive.html
@@ -184,6 +184,7 @@
             <p>
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved by NETHAJI E.M SCHOOL
                              </p>
+		  <h1>Best Viewed in 1349 X 750 screen resolution.</h1>
           </div>
         </div>
 
