--- a/achive.html
+++ b/achive.html
@@ -183,8 +183,9 @@
           <div class="col-md-12">
             <p>
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved by NETHAJI E.M SCHOOL
-                             </p>
-		  <h1>Best Viewed in 1349 X 750 screen resolution.</h1>
+                  <br>Best Viewed in 1349 X 750 screen resolution.      
+		  </p>
+		
           </div>
         </div>
 
