--- a/about.html
+++ b/about.html
@@ -136,7 +136,8 @@
           <div class="col-md-12">
             <p>
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved by NETHAJI E.M SCHOOL
-</p>
+<br>Best Viewed in 1349 X 750 screen resolution.
+		  </p>
           </div>
         </div>
 
