--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css">   
     <link rel="stylesheet" href="css/style.css">
    	  
-	  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-127464469-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-127464469-1');
+	  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-127464469-1', 'auto');
+  ga('require', 'GTM-NT8TPRB');
+  ga('send', 'pageview');
 </script>
   </head>
   <body>
