--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@ h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
   <div class="row mb-5">
           <div class="col-md-4">
             <h3>About</h3>
-            <p>NETHAJI E.M SCHOOL is one among best schools in Podalakur.
-			Moulding child to perform lot than expected.</p>
+            <p>NETHAJI E.M SCHOOL is one among the best schools in Podalakur.
+			Moulding Students to perform more than expected.</p>
           </div>
           </div>
         <div class="row">
