--- a/achive.html
+++ b/achive.html
@@ -175,8 +175,8 @@
   <div class="row mb-5">
           <div class="col-md-4">
             <h3>About</h3>
-            <p>NETHAJI E.M SCHOOL is one among best schools in Podalakur.
-			Moulding child to perform lot than expected.</p>
+            <p>NETHAJI E.M SCHOOL is one  the among best schools in Podalakur.
+			Moulding Student to perform more than expected.</p>
           </div>
           </div>
         <div class="row">
