--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
           <div class="col-md-8 text-center">
 
             <div class="mb-5 element-animate">
-              <h1>Wisdom is Better than Jewellers</h1>
+              <h1>Wisdom is Better than JEWLS</h1>
               </div>           
           </div>
         </div>
