--- a/index.html
+++ b/index.html
@@ -118,11 +118,9 @@
     </section>
     <!-- END section -->
 
-    <section class="overflow" style="background-color:aqua;height:588px">
+    <section class="overflow" style="background-image: linear-gradient(orange,white,green);height:588px">
       <div class="container">
-        <div class="row justify-content-center align-items-center">
-          
-          
+        <div class="row justify-content-center align-items-center">         
           <div class="col-lg-7 order-lg-3 order-1 mb-lg-0 mb-5">
             <img src="images/schoolchildren.jpg" alt="Image placeholder" class="img-md-fluid" style="width:752px;height:588px;opacity:0.9">
           </div>
@@ -159,7 +157,9 @@
           <div class="col-md-12">
             <p>
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved by NETHAJI E.M SCHOOL
+<br>Best Viewed in 1349 X 750 screen resolution.
 </p>
+
           </div>
         </div>
 
