--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
         <section class="school-features text-dark d-flex">
           <div class="inner" style="width:100%">
 		  <div class="media d-block feature text-center" style="position:relative;left:10%">
-              <img src="images/di.JPG" alt="Image placeholder" class="mb-3" style="width:95%;height:72%">
+              <img src="images/di.JPG" alt="Image placeholder" class="mb-3" style="width:95%;height:72%;">
               <div class="media-body">
                 <h3 class="mt-0">Rammohan Rao Karnam</h3>
                 <p>Director</p>
