--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
         <section class="school-features text-dark d-flex">
           <div class="inner" style="width:100%">
 		  <div class="media d-block feature text-center" style="position:relative;left:10%">
-              <img src="images/di.JPG" alt="Image placeholder" class="mb-3" style="width:95%;height:72%;">
+              <img src="images/di.JPG" alt="Image placeholder" class="mb-3" style="width:95%;height:72%">
               <div class="media-body">
                 <h3 class="mt-0">Rammohan Rao Karnam</h3>
                 <p>Director</p>
@@ -99,6 +99,7 @@
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center">
             <h2>Started with a Passion</h2>
+		
            </div>
         </div>
    
@@ -128,15 +129,16 @@
   <div class="row mb-5">
           <div class="col-md-4">
             <h3>About</h3>
-            <p>NETHAJI E.M SCHOOL is one among best schools in Podalakur.
-			Moulding child to perform lot than expected.</p>
+            <p>NETHAJI E.M SCHOOL is one the among best schools in Podalakur.
+			Moulding Student to perform more than expected.</p>
           </div>
           </div>
         <div class="row">
           <div class="col-md-12">
             <p>
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved by NETHAJI E.M SCHOOL
-</p>
+<br>Best Viewed in 1349 X 750 screen resolution.
+		  </p>
           </div>
         </div>
 
