--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@ h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
 
             <div class="mb-5 element-animate">
               <h1>Wisdom is Better than JEWELS</h1>
-              </div>           
+		                
+		  <iframe width="560" height="315" src="https://assistant-chat-au-syd.watsonplatform.net/web/public/6eb7b4fe-ccfe-4b7c-8184-3e7c43d1c41b" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>		  
+		  </div>           
           </div>
         </div>
       </div>
