--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	  <title>Nethaji E.M School</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="Description" content="Nethaji English Medium School is a good place to build and achevie your dreams.">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,900" rel="stylesheet">
       <link rel="stylesheet" href="css/bootstrap.css">
      <link href="images/icon1.png" rel="shortcut icon"> 
